mule-user-guide/v/3.6/microsoft-service-bus-connector-faq.adoc
= Microsoft Service Bus Connector FAQ
:keywords: anypoint studio, esb, connector, endpoint, microsoft, azure, windows service bus, windows

== Q: What can I integrate with using this connector?

A: The Service Bus connector allows integration with both Windows Service Bus on-premises or Azure Service Bus cloud-hosted environments.

== Q: What queue types are supported by the connector?

A: All Service Bus queue types are supported, including standard queues, topics, and event hubs.

== Q: What protocol does the connector use?

A: The Service Bus connector uses AMQP 1.0 for message encoding and transport. The Mule payload is mapped to the AMQP message body, with message properties being mapped to the AMQP envelope properties.

== Q: How do I connect to a specific queue or topic of interest?

A: Once the Service Bus namespace has been configured in the connector, the available queues, topics and event hubs in that namespace are made available via DataSense allowing simple configuration of flows to send  or receive messages to the appropriate endpoint.

== Q: Can I dynamically provision new queues or topics from within Mule?

A: Yes, the full admin API is exposed via the Service Bus connector making it simple to build dynamic integration applications.

== Q: What Mule editions can I use this connector on?

A: This connector is supported on any Enterprise Edition Anypoint platform running on any operating system and bit-ness, including the CloudHub integration PaaS.

== See Also

* Read the link:https://docs.mulesoft.com/release-notes/microsoft-service-bus-connector-release-notes[Microsoft Service Bus Connector 1.0 Release Notes.]
* Learn more about the connect using the link:https://docs.mulesoft.com/mule-user-guide/v/3.6/microsoft-service-bus-connector[Microsoft Service Bus Connector] guide.
